# hashids-python

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  README.txt  hashids.py  pyproject.toml  setup.py  tests.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: publish-to-pypi.yml
test/: test_hashids.py  test_legacy.py
