[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hashids"
author = "David Aurelio"
author-email = "dev@david-aurelio.com"
home-page = "https://hashids.org/python/"
description-file="README.rst"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.1.0",
]

[tool.flit.sdist]
include = [
  "CHANGELOG.md",
  "hashids.py",
  "LICENSE",
  "pyproject.toml",
  "README.rst",
  "test/*.py",
]
exclude = [ ".*" ]

[tool.poetry]
name = "hashids"
version = "1.4.0"
description = "Implements the hashids algorithm in python."
authors = ["LindezaGrey <39629455+LindezaGrey@users.noreply.github.com>", "David Aurelio"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ruff = "^0.0.256"
pytest = "^7.4.0"
