[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100

[tool.flit.metadata]
module = "hashids"
author = "David Aurelio"
author-email = "dev@david-aurelio.com"
home-page = "https://hashids.org/python/"
description-file = "README.rst"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
test = ["pytest >=2.1.0"]

[tool.flit.sdist]
include = [
  "CHANGELOG.md",
  "hashids.py",
  "LICENSE",
  "pyproject.toml",
  "README.rst",
  "test/*.py",
]
exclude = [".*"]
